# EvoAgentOps

./: .gitignore  README.md  pyproject.toml
agent_system/AutoGen_GSM8K/: README.md  main.py  prompt.py  run_all.py
agent_system/AutoGen_GSM8K/workdir-dev/gsm8k-0000_20251103231550/: output.json
agent_system/AutoGen_GSM8K/workdir-dev/gsm8k-0000_20251103231550/monitor_data/metrics/: 20251230_190145.csv
agent_system/AutoGen_GSM8K/workdir-dev/gsm8k-0000_20251103231550/monitor_data/trace/: 20251230_110220.json
agent_system/AutoGen_GSM8K/workdir-dev/gsm8k-0000_20251103231551/: qa.json
agent_system/AutoGen_GSM8K/workdir-dev/gsm8k-0000_20251103231551/monitor_data/metrics/: 20251230_190145.csv
agent_system/LangGraph_Spider/: main.py  prompt.py.bak  run_all.py
agent_system/LangGraph_Spider/workdir-dev/spider-0014_20251104113447/: output.json  qa.json
agent_system/LangGraph_Spider/workdir-dev/spider-0014_20251104113447/monitor_data/metrics/: 20251229_021802.csv  20251229_091808.csv  20251229_092252.csv  20251229_092737.csv  20251229_093011.csv
agent_system/LangGraph_Spider/workdir-dev/spider-0014_20251104113447/monitor_data/trace/: 20251229_012810.json  20251229_013043.json
agent_system/LangGraph_Spider/workdir-dev/spider-0021_20251104113738/: qa.json
datasets/fault_injected/autogen_math/: call_llm.jsonl
datasets/fault_injected/langgraph_sql/: call_llm.jsonl
datasets/fault_injected/veadk_gaia/: call_llm.jsonl
datasets/parsed/adk_swe/: agent_settings.json  split_info.csv
datasets/parsed/agno_rca/: agent_dependency.json  split_info.csv
datasets/parsed/autogen_math/: agent_dependency.json  split_info.csv
datasets/parsed/langgraph_sql/: split_info.csv
datasets/parsed/veadk_gaia/: agent_dependency.json  agent_settings.json  split_info.csv
evoagentops/: casebank.py  config.py  fault_injection.py  judge.py  judge_check.py  prompt.py  util.py
evoagentops/observability/: log.py  metrics.py  trace.py
scripts/: 02_train_case_principlebank.py  03_test_faultinjection.py  06_run_all_task.py  07_runagent_retry.py  a_judge_principle.py  a_judge_principle_all.py  b_execute_principle.py  b_execute_principle_all.py  compare_run_whodata.py  compare_run_whodata_aggre_train_bank.py  compare_run_whodata_all.py  compare_who.py  compare_who_all.py  compare_who_runwhodata.py  compare_who_runwhodata_all.py
(+950 files in other folders)
