[project]
name = "evoagentops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    # Validation
    "ipykernel==7.1.0",
    "matplotlib==3.10.8",
    "pandas==2.2.3",
    "numpy==2.4.0",
    "python-dotenv==1.2.1",
    "datasets==4.4.2",
    # Tools
    "flask==3.1.2",
    "pdf2image==1.17.0",
    "youtube-transcript-api==1.2.3",
    "bs4==0.0.2",
    "boto3==1.42.14",
    "openpyxl==3.1.5",
    "python-pptx==1.0.2",
    "pdfminer-six==20251107",
    "mammoth==1.11.0",
    "markdownify==1.2.2",
    "pydub==0.25.1",
    "SpeechRecognition==3.14.4",
    "puremagic==1.30",
    "biopython==1.86",
    "rich==14.2.0",
    "selenium==4.39.0",
    "helium==5.1.2",
    "smolagents==1.23.0",
    "ddgs==9.10.0",
    "duckduckgo_search==8.1.1",
    # Agents
    "veadk-python==0.2.34",
    "google-adk==1.19.0",
    "langchain==0.3.27",
    "langchain-core==0.3.80",
    "langchain-openai==0.3.32",
    "langchain-experimental==0.3.4",
    "langchain-text-splitters==0.3.11",
    "langgraph==1.0.1",
    "autogen-core==0.7.5",
    "autogen-ext[openai]==0.7.5",
    "autogen-agentchat==0.7.5",
    "litellm==1.74.3",
    "agentops==0.4.21",
    "deepeval==3.7.6",
    "galileo[openai]==1.38.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-proto==1.37.0",
    "langfuse==3.11.1",
    "arize-phoenix-otel==0.14.0",
    "arize-phoenix==12.25.1",
    "arize-phoenix-evals==2.7.1",
    "openinference-instrumentation-google-adk==0.1.8",
    "openinference-instrumentation-openai==0.1.41",
    "openinference-instrumentation-langchain==0.1.56",
    "openinference-instrumentation-autogen-agentchat==0.1.6",
    "openinference-instrumentation-autogen==0.1.5",
    "autogen==0.10.0",
    "agno==2.3.19",
    "openinference-instrumentation-agno==0.1.25",
    "openinference-instrumentation-crewai==0.1.17",
    "crewai==1.6.1",
    "crewai-tools==1.6.1",
    "xlrd==2.0.2",
    "anthropic==0.75.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["evoagentops", "evoagentops.*"]